--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/main_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
+        <activity android:name=".home.fragment.article.view.DetailArticleActivity"/>
         <activity android:name=".register.welcome.WelcomeNewUserActivity" />
         <activity android:name=".home.fragment.card.view.CardPayActivity" />
         <activity android:name=".home.fragment.account.view.ChangePinActivity" />
